<resources>
    <string name="app_name">Simple_Deals_EcommersApp</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Share this app</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_view_orders">View Orders</string>

    <string name="home_second">Home Second</string>
    <string name="popular_categories">Popular Items</string>
    <string name="best_deals">Best Deals</string>
    <string name="size">Size</string>
    <string name="addon">AddOn</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="default_notification_channel_id">11111</string>
    <string name="action_search">Search</string>
    <string name="menu_restaurant">Products</string>
    <string name="menu_subscribe_news">Notification</string>
    <string name="rate_us">Rate this app</string>
    <string name="likeUs">Follow us on FB</string>
    <string name="contact_us">Contact us</string>


</resources>
